initial ingress setup and config

--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -24,4 +24,6 @@ spec:
           envFrom:
             - configMapRef:
                 name: auth-config
+            - secretRef:
+                name: jwt-secret
 status: {}
