--- a/infra/k8s/auth-srv.yaml
+++ b/infra/k8s/auth-srv.yaml
@@ -3,13 +3,13 @@ kind: Service
 metadata:
   creationTimestamp: null
   labels:
-    skaffold.dev/run-id: e09da58c-ed62-4803-a8ff-25700e2e19b9
+    app: auth-srv
   name: auth-srv
 spec:
   ports:
-  - port: 3000
-    protocol: TCP
-    targetPort: 3000
+    - port: 3000
+      protocol: TCP
+      targetPort: 3000
   selector:
     app: auth
   type: ClusterIP
