--- a/infra/k8s/client-depl.yaml
+++ b/infra/k8s/client-depl.yaml
@@ -15,5 +15,22 @@ spec:
         app: recipe-client
     spec:
       containers:
-        - image: gabeodame/recipe-client:1.0.1
+        - image: gabeodame/recipe-client:latest
           name: recipe-client
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  labels:
+    app: recipe-client
+  name: recipe-client-service
+spec:
+  ports:
+    - name: client
+      port: 3000
+      protocol: TCP
+      targetPort: 3000
+  selector:
+    app: recipe-client
+  type: ClusterIP
