--- a/recipe/package.json
+++ b/recipe/package.json
@@ -4,7 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --poll src/index.ts"
+    "start": "ts-node-dev --poll src/index.ts",
+    "test": "jest --watchAll --no-cache"
+  },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "setupFilesAfterEnv": [
+      "./src/test/setup.ts"
+    ]
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
@@ -13,6 +21,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@gogittix/common": "^1.0.4",
     "@prisma/client": "^5.10.2",
     "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.21",
