--- a/infra/k8s/recipe-depl.yaml
+++ b/infra/k8s/recipe-depl.yaml
@@ -1,6 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  namespace: recipe
   labels:
     app: recipe
   name: recipe-depl
@@ -46,6 +47,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: recipe
   labels:
     app: recipe
   name: recipe-service
