--- a/infra/k8s/recipe-postgres1.yaml
+++ b/infra/k8s/recipe-postgres1.yaml
@@ -28,6 +28,9 @@ spec:
                   key: postgres-password
             - name: POSTGRES_DB
               value: "recipe"
+            # Setting PGDATA to point to the subdirectory
+            - name: PGDATA
+              value: "/var/lib/postgresql/data/pgdata"
           ports:
             - containerPort: 5432
           volumeMounts:
