--- a/recipe/package.json
+++ b/recipe/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "express-async-errors": "^3.1.1",
+    "helmet": "^7.1.0",
     "supertest": "^6.3.4"
   },
   "devDependencies": {
