--- a/infra/k8s/ingress-srv-prod.yaml
+++ b/infra/k8s/ingress-srv-prod.yaml
@@ -8,7 +8,7 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
-    - host: recipe.dev
+    - host: dishsharing.com
       http:
         paths:
           - path: /api/users/?(.*)
