--- a/infra/k8s/prod/ingress-srv-prod.yaml
+++ b/infra/k8s/prod/ingress-srv-prod.yaml
@@ -4,8 +4,11 @@ metadata:
   name: ingress-service
   namespace: recipe
   annotations:
-    kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/use-regex: "true"
+    kubernetes.io/ingress.class: azure/application-gateway
+    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
+    appgw.ingress.kubernetes.io/cookie-based-affinity: "true"
+    appgw.ingress.kubernetes.io/ssl-redirect: "true"
+    appgw.ingress.kubernetes.io/request-timeout: "30"
 spec:
   rules:
     - host: dishsharing.com
