--- a/recipe/package.json
+++ b/recipe/package.json
@@ -21,6 +21,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@azure/identity": "^4.4.1",
+    "@azure/keyvault-secrets": "^4.8.0",
     "@gogittix/common": "^1.0.4",
     "@prisma/client": "^5.10.2",
     "@types/cookie-session": "^2.0.48",
@@ -35,7 +37,7 @@
     "supertest": "^6.3.4"
   },
   "devDependencies": {
-    "@types/node": "^20.11.26",
+    "@types/node": "^20.16.5",
     "prisma": "^5.10.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
