--- a/infra/k8s/aws-depl/auth-mongo-pvc.yaml
+++ b/infra/k8s/aws-depl/auth-mongo-pvc.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  namespace: recipe
   name: mongo-pvc
+  namespace: recipe
 spec:
-  storageClassName: gp2
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
+  storageClassName: gp2-aws-sc
