--- a/infra/k8s/aws-depl/postgres-pvc.yaml
+++ b/infra/k8s/aws-depl/postgres-pvc.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   namespace: recipe
-  name: mongo-pvc
+  name: postgres-pvc
 spec:
-  storageClassName: gp2
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
+  storageClassName: gp2-aws-sc
