--- a/infra/k8s/aws/aws-recipe-postgres-secret.yaml
+++ b/infra/k8s/aws/aws-recipe-postgres-secret.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Secret
 data:
-  postgres-db: cmVjaXBlCg==
-  postgres-password: cGFzc3dvcmQK
-  postgres-user: Z2FiZW9kYW1lCg==
+  postgres-db: cmVjaXBl
+  postgres-password: cGFzc3dvcmQ=
+  postgres-user: Z2FiZW9kYW1l
   database-url: cG9zdGdyZXNxbDovL2dhYmVvZGFtZTpwYXNzd29yZEByZWNpcGUtcG9zdGdyZXMtc2VydmljZTo1NDMyL3JlY2lwZQo=
 type: Opaque
 metadata:
