--- a/infra/k8s/base/auth-depl.yaml
+++ b/infra/k8s/base/auth-depl.yaml
@@ -18,6 +18,7 @@ spec:
       containers:
         - name: auth-service
           image: gabeodame/auth-service:1.0.3
+          imagePullPolicy: Always
           envFrom:
             - configMapRef:
                 name: auth-config
@@ -38,4 +39,4 @@ spec:
       protocol: TCP
       targetPort: 3000
   selector:
-    app: auth-service
+    app: auth-servicep
