--- a/infra/k8s/base/client-depl.yaml
+++ b/infra/k8s/base/client-depl.yaml
@@ -18,6 +18,7 @@ spec:
       containers:
         - image: gabeodame/recipe-client:latest
           name: recipe-client
+          imagePullPolicy: Always
 
 ---
 apiVersion: v1
