--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.0",
     "sharp": "^0.33.2",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0",
