complete build of rabbitmq broker and implement pub/sub between auth and profile service

--- a/services/profile/.env
+++ b/services/profile/.env
@@ -6,3 +6,4 @@ DB_NAME=userprofile
 NODE_ENV=development
 DATABASE_URL=postgresql://gabrielodame:HardPassword@userprofile-postgres-headless:5432/userprofile
 DB_SYNCHRONIZE=true
+RABBITMQ_URL="amqp://admin:adminpass@rabbitmq-service:5672"
