--- a/infra/k8s/dev/deployments/auth-depl.yaml
+++ b/infra/k8s/dev/deployments/auth-depl.yaml
@@ -48,6 +48,11 @@ spec:
                 secretKeyRef:
                   name: mongo-secret
                   key: MONGO_INITDB_ROOT_PASSWORD
+            - name: RABBITMQ_URL
+              valueFrom:
+                secretKeyRef:
+                  name: mongo-secret
+                  key: RABBITMQ_URL
       volumes:
         - name: init-data
           emptyDir: {}
