--- a/infra/k8s/dev/deployments/recipe-depl.yaml
+++ b/infra/k8s/dev/deployments/recipe-depl.yaml
@@ -27,6 +27,11 @@ spec:
                 secretKeyRef:
                   name: recipe-postgres-secret
                   key: database-url
+            - name: RABBITMQ_URL
+              valueFrom:
+                secretKeyRef:
+                  name: mongo-secret
+                  key: RABBITMQ_URL
 
 ---
 apiVersion: v1
