--- a/infra/k8s/dev/deployments/userprofile.yaml
+++ b/infra/k8s/dev/deployments/userprofile.yaml
@@ -54,6 +54,11 @@ spec:
                   key: postgres-db
             - name: NODE_ENV
               value: "production"
+            - name: RABBITMQ_URL
+              valueFrom:
+                secretKeyRef:
+                  name: mongo-secret
+                  key: RABBITMQ_URL
 
 
 ---
