--- a/infra/k8s/dev/statefulsets/rabbitmq-sts.yaml
+++ b/infra/k8s/dev/statefulsets/rabbitmq-sts.yaml
@@ -1,6 +1,7 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
+  namespace: recipe
   name: rabbitmq
 spec:
   replicas: 1
@@ -19,21 +20,36 @@ spec:
         ports:
         - containerPort: 5672 # AMQP Port
         - containerPort: 15672 # Management Console Port
+        env:
+        - name: RABBITMQ_DEFAULT_USER
+          valueFrom:
+            secretKeyRef:
+              name: rabbitmq-secret
+              key: rabbitmq-username
+        - name: RABBITMQ_DEFAULT_PASS
+          valueFrom:
+            secretKeyRef:
+              name: rabbitmq-secret
+              key: rabbitmq-password
         volumeMounts:
         - name: rabbitmq-data
           mountPath: /var/lib/rabbitmq
-      volumes:
-      - name: rabbitmq-data
-        persistentVolumeClaim:
-          claimName: rabbitmq-pvc
-
+  volumeClaimTemplates:
+  - metadata:
+      name: rabbitmq-data 
+    spec:
+      accessModes: ["ReadWriteOnce"]
+      resources:
+        requests:
+          storage: 1Gi
 ---
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: recipe
   name: rabbitmq-service
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   selector:
     app: rabbitmq
   ports:
