--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -19,10 +19,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@anchordiv/broker": "^1.0.10",
     "@gogittix/common": "^1.0.4",
     "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
+    "amqplib": "^0.10.5",
     "body-parser": "^1.20.2",
     "cookie-session": "^2.1.0",
     "dotenv": "^16.4.5",
@@ -32,6 +34,7 @@
     "mongoose": "^8.2.1"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.6",
     "@types/jest": "^29.5.12",
     "@types/supertest": "^6.0.2",
     "@types/typescript": "^2.0.0",
