--- a/services/recipe/package.json
+++ b/services/recipe/package.json
@@ -21,6 +21,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@anchordiv/broker": "^1.0.7",
     "@azure/identity": "^4.4.1",
     "@azure/keyvault-secrets": "^4.8.0",
     "@gogittix/common": "^1.0.4",
@@ -29,6 +30,7 @@
     "@types/express": "^4.17.21",
     "@types/supertest": "^6.0.2",
     "@types/typescript": "^2.0.0",
+    "amqplib": "^0.10.5",
     "cookie-session": "^2.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
@@ -37,6 +39,7 @@
     "supertest": "^6.3.4"
   },
   "devDependencies": {
+    "@types/amqplib": "^0.10.6",
     "@types/node": "^20.16.5",
     "prisma": "^5.10.2",
     "ts-node": "^10.9.2",
