complete build of rabbitmq broker and implement pub/sub between auth and profile service

--- a/infra/k8s/dev/secrets/auth-mongo-secret.yaml
+++ b/infra/k8s/dev/secrets/auth-mongo-secret.yaml
@@ -8,4 +8,5 @@ data:
   MONGO_INITDB_ROOT_USERNAME: Z2FiZW9kYW1l
   MONGO_INITDB_ROOT_PASSWORD: cGFzc3dvcmQ=
   MONGO_URI: bW9uZ29kYjovL2dhYmVvZGFtZTpwYXNzd29yZEBhdXRoLW1vbmdvLWhlYWRsZXNzOjI3MDE3L2F1dGg/YXV0aFNvdXJjZT1hZG1pbg==
+  RABBITMQ_URL: YW1xcDovL2FkbWluOmFkbWlucGFzc0ByYWJiaXRtcS1zZXJ2aWNlOjU2NzIK
 type: Opaque
