--- a/infra/k8s/dev/secrets/recipe-postgres-secret.yaml
+++ b/infra/k8s/dev/secrets/recipe-postgres-secret.yaml
@@ -9,3 +9,4 @@ data:
   postgres-password: cGFzc3dvcmQ=
   postgres-user: Z2FiZW9kYW1l
   database-url: cG9zdGdyZXNxbDovL2dhYmVvZGFtZTpwYXNzd29yZEByZWNpcGUtcG9zdGdyZXMtaGVhZGxlc3M6NTQzMi9yZWNpcGU=
+  RABBITMQ_URL: YW1xcDovL2FkbWluOmFkbWlucGFzc0ByYWJiaXRtcS1zZXJ2aWNlOjU2NzIK
