--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -19,7 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@anchordiv/broker": "^1.0.12",
+    "@anchordiv/rabbitmq-broker": "^1.0.2",
     "@gogittix/common": "^1.0.4",
     "@types/cookie-session": "^2.0.48",
     "@types/express": "^4.17.21",
