--- a/services/client/package.json
+++ b/services/client/package.json
@@ -46,7 +46,7 @@
     "@types/react-lottie": "^1.2.10",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "^14.2.22",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
