initializing recipe creation form

--- a/infra/k8s/dev/deployments/userprofile.yaml
+++ b/infra/k8s/dev/deployments/userprofile.yaml
@@ -74,6 +74,26 @@ spec:
                 secretKeyRef:
                   name: userprofile-postgres-secret
                   key: RABBITMQ_URL
+            - name: AWS_REGION
+              valueFrom:
+                secretKeyRef:
+                  name: userprofile-postgres-secret
+                  key: AWS_REGION
+            - name: AWS_ACCESS_KEY_ID
+              valueFrom:
+                secretKeyRef:
+                  name: userprofile-postgres-secret
+                  key: AWS_ACCESS_KEY_ID
+            - name: AWS_SECRET_ACCESS_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: userprofile-postgres-secret
+                  key: AWS_SECRET_ACCESS_KEY
+            - name: AWS_S3_BUCKET
+              valueFrom:
+                secretKeyRef:
+                  name: userprofile-postgres-secret
+                  key: AWS_S3_BUCKET
 
 
 ---
