--- a/services/profile/.env
+++ b/services/profile/.env
@@ -7,3 +7,7 @@ NODE_ENV=development
 DATABASE_URL=postgresql://gabrielodame:HardPassword@userprofile-postgres-headless:5432/userprofile
 DB_SYNCHRONIZE=true
 RABBITMQ_URL="amqp://admin:adminpass@rabbitmq-service:5672"
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=AKIA4MTWOA3D3OVT2WXM
+AWS_SECRET_ACCESS_KEY=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
+AWS_S3_BUCKET=anchortest01
