--- a/infra/k8s/dev/deployments/recipe-depl.yaml
+++ b/infra/k8s/dev/deployments/recipe-depl.yaml
@@ -30,7 +30,7 @@ spec:
             - name: RABBITMQ_URL
               valueFrom:
                 secretKeyRef:
-                  name: mongo-secret
+                  name: rabbitmq-secret
                   key: RABBITMQ_URL
 
 
