--- a/services/profile/Dockerfile
+++ b/services/profile/Dockerfile
@@ -1,20 +1,32 @@
-# use the official Nestjs image as the base image
+# Use the official Node.js 18 Alpine base image
+FROM node:18-alpine AS builder
+
+# Set the working directory
+WORKDIR /app
+
+# Install dependencies
+COPY package*.json ./
+RUN npm ci
+
+# Copy the application code
+COPY . .
+
+# Build the application
+RUN npm run build
+
+# Use a lightweight image for the final production build
 FROM node:18-alpine
 
 # Set the working directory
 WORKDIR /app
 
-# Copy the package.json and package-lock.json
-COPY package*.json ./
+# Copy dependencies and built application from the builder stage
+COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/dist ./dist
+COPY package.json ./
 
-# Install the dependencies
-RUN npm ci
-
-# Copy the rest of the application code
-COPY . .
-
-# Expose the port
+# Expose the application port
 EXPOSE 3000
 
-# Start the application
-CMD ["npm", "run", "start:dev"]
+# Command to run the application
+CMD ["node", "dist/main"]
