--- a/services/recipe/package.json
+++ b/services/recipe/package.json
@@ -14,11 +14,14 @@
   "license": "ISC",
   "dependencies": {
     "@anchordiv/rabbitmq-broker": "^1.0.2",
-    "@gogittix/common": "^1.0.9",
+    "@gogittix/common": "^1.0.11",
     "@prisma/client": "^6.1.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "reflect-metadata": "^0.2.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
