completes securing repcipe create, update api endpoints. update model for recipe and profile to simplify complexity

--- a/infra/k8s/dev/deployments/ingredient-depl.yaml
+++ b/infra/k8s/dev/deployments/ingredient-depl.yaml
@@ -68,6 +68,11 @@ spec:
                 secretKeyRef:
                   name: ingredient-postgres-secret
                   key: RABBITMQ_URL
+            - name: JWT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
           # resources:
           #   requests:
           #     memory: "512Mi"
