--- a/infra/k8s/dev/deployments/recipe-depl.yaml
+++ b/infra/k8s/dev/deployments/recipe-depl.yaml
@@ -32,6 +32,11 @@ spec:
                 secretKeyRef:
                   name: rabbitmq-secret
                   key: RABBITMQ_URL
+            - name: JWT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
 
 
 ---
