--- a/services/client/package.json
+++ b/services/client/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@gogittix/common": "^1.0.13",
+    "@gogittix/common": "^1.0.14",
     "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.9.0",
     "@plaiceholder/next": "^3.0.0",
@@ -22,6 +22,8 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/themes": "^2.0.3",
     "axios": "^1.7.9",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.5",
@@ -33,6 +35,7 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.0",
+    "recharts": "^2.15.0",
     "sharp": "^0.33.2",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.1",
