--- a/services/profile/package.json
+++ b/services/profile/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@anchordiv/rabbitmq-broker": "^1.0.2",
+    "@gogittix/common": "^1.0.14",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
