complete add ingredient form - setup recipe form to search existing ingredient on name change

--- a/services/ingredient/.env
+++ b/services/ingredient/.env
@@ -7,3 +7,4 @@ DATABASE_URL=postgresql://gabrielodame:HardPassword@userprofile-postgres-headles
 DB_SYNCHRONIZE=true
 RABBITMQ_URL="amqp://admin:adminpass@rabbitmq-service:5672"
 NODE_ENV=development
+BASE_URL=http://ingress-nginx-controller.ingress-nginx.svc.cluster.local
