--- a/services/recipe/package.json
+++ b/services/recipe/package.json
@@ -13,8 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@anchordiv/rabbitmq-broker": "^1.0.4",
-    "@gogittix/common": "^1.0.14",
+    "@anchordiv/rabbitmq-broker": "^1.0.9",
+    "@gogittix/common": "^1.0.15",
     "@prisma/client": "^6.1.0",
     "axios": "^1.7.9",
     "class-transformer": "^0.5.1",
@@ -23,6 +23,7 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "reflect-metadata": "^0.2.2",
+    "slugify": "^1.6.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
