--- a/services/client/package.json
+++ b/services/client/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@atlaskit/pragmatic-drag-and-drop": "^1.4.0",
+    "@atlaskit/pragmatic-drag-and-drop-hitbox": "^1.0.3",
     "@gogittix/common": "^1.0.15",
+    "@hello-pangea/dnd": "^17.0.0",
     "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.9.0",
     "@plaiceholder/next": "^3.0.0",
@@ -22,6 +25,7 @@
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/themes": "^2.0.3",
     "@types/aws-sdk": "^2.7.4",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "aws-sdk": "^2.1692.0",
     "axios": "^1.7.9",
     "class-transformer": "^0.5.1",
@@ -33,15 +37,18 @@
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.0.1",
     "react-intersection-observer": "^9.8.0",
     "recharts": "^2.15.0",
     "sharp": "^0.33.2",
+    "slugify": "^1.6.6",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
+    "tiny-invariant": "^1.3.3",
     "use-debounce": "^10.0.0",
     "zod": "^3.23.8"
   },
