--- a/services/recipe/package.json
+++ b/services/recipe/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --poll src/server.ts"
+    "start": "ts-node-dev --poll src/server.ts",
+    "test": "jest --coverage"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
@@ -15,7 +16,6 @@
   "dependencies": {
     "@anchordiv/rabbitmq-broker": "^1.0.9",
     "@gogittix/common": "^1.0.15",
-    "@prisma/client": "^6.1.0",
     "axios": "^1.7.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -25,12 +25,19 @@
     "reflect-metadata": "^0.2.2",
     "slugify": "^1.6.6",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@prisma/client": "^6.3.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.10.5",
+    "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.7",
+    "jest": "^29.7.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tslib": "^2.8.1",
