--- a/services/recipe/package.json
+++ b/services/recipe/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
+    "lodash": "^4.17.21",
     "reflect-metadata": "^0.2.2",
     "slugify": "^1.6.6",
     "swagger-jsdoc": "^6.2.8",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@prisma/client": "^6.3.0",
     "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.15",
     "@types/node": "^22.10.5",
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
