--- a/infra/k8s/dev/deployments/client-depl.yaml
+++ b/infra/k8s/dev/deployments/client-depl.yaml
@@ -21,6 +21,12 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3000
+          env:
+            - name: NEXT_PUBLIC_API_URL
+              valueFrom:
+                secretKeyRef:
+                  name: recipe-secret
+                  key: NEXT_PUBLIC_API_URL
           # livenessProbe:
           #   httpGet:
           #     path: /
