--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -71,6 +71,7 @@ manifests:
     - ./infra/k8s/dev/secrets/rabbitmq-secret.yaml
     - ./infra/k8s/dev/secrets/jwt-auth-secret.yaml
     - ./infra/k8s/dev/secrets/s3-secret.yaml
+    - ./infra/k8s/dev/secrets/recipe-client-secret.yaml
   # dev k8s resources - statefulsets
     - ./infra/k8s/dev/statefulsets/rabbitmq-sts.yaml
     - ./infra/k8s/dev/statefulsets/auth-mongo-sts.yaml
@@ -102,6 +103,7 @@ profiles:
         - ./infra/k8s/dev/secrets/rabbitmq-secret.yaml
         - ./infra/k8s/dev/secrets/jwt-auth-secret.yaml
         - ./infra/k8s/dev/secrets/s3-secret.yaml
+        - ./infra/k8s/dev/secrets/recipe-client-secret.yaml
       # dev k8s resources - statefulsets
         - ./infra/k8s/dev/statefulsets/rabbitmq-sts.yaml
         - ./infra/k8s/dev/statefulsets/auth-mongo-sts.yaml
