--- a/infra/helm/food-app/templates/deployments.yaml
+++ b/infra/helm/food-app/templates/deployments.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ .deploymentName | default (printf "%s-depl" .name) }}
-  namespace: {{ $.Values.namespace }}
+  namespace: {{ $.Release.Namespace }}
   labels:
     app: {{ .appLabel | default .name }}
     {{- include "food-app.labels" $ | nindent 4 }}
@@ -53,7 +53,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .service.name | default (printf "%s-service" .name) }}
-  namespace: {{ $.Values.namespace }}
+  namespace: {{ $.Release.Namespace }}
   labels:
     app: {{ .appLabel | default .name }}
     {{- include "food-app.labels" $ | nindent 4 }}
