--- a/infra/helm/food-app/templates/ingress.yaml
+++ b/infra/helm/food-app/templates/ingress.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: ingress-service
-  namespace: {{ .Values.namespace }}
+  namespace: {{ .Release.Namespace }}
   {{- if .Values.ingress.annotations }}
   annotations:
     {{- toYaml .Values.ingress.annotations | nindent 4 }}
