--- a/infra/helm/food-app/templates/networkpolicies.yaml
+++ b/infra/helm/food-app/templates/networkpolicies.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: {{ .name }}
-  namespace: {{ $.Values.namespace }}
+  namespace: {{ $.Release.Namespace }}
   labels:
     {{- include "food-app.labels" $ | nindent 4 }}
 spec:
