--- a/infra/helm/food-app/templates/statefulsets.yaml
+++ b/infra/helm/food-app/templates/statefulsets.yaml
@@ -3,7 +3,7 @@ apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: {{ .name }}
-  namespace: {{ $.Values.namespace }}
+  namespace: {{ $.Release.Namespace }}
   labels:
     app: {{ .appLabel | default .name }}
     {{- include "food-app.labels" $ | nindent 4 }}
@@ -45,7 +45,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .service.name }}
-  namespace: {{ $.Values.namespace }}
+  namespace: {{ $.Release.Namespace }}
   labels:
     app: {{ .appLabel | default .name }}
     {{- include "food-app.labels" $ | nindent 4 }}
