--- a/infra/helm/food-app/values-staging.yaml
+++ b/infra/helm/food-app/values-staging.yaml
@@ -2,4 +2,10 @@ global:
   imageTag: "staging"
 
 ingress:
+  enabled: false
   host: recipe.staging
+
+gateway:
+  enabled: true
+  hostnames:
+    - recipe.staging
