--- a/services/recipe/package.json
+++ b/services/recipe/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node-dev --poll src/server.ts",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/server.js",
+    "start:dev": "ts-node-dev --poll src/server.ts",
     "test": "jest --coverage"
-  },
-  "prisma": {
-    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +15,8 @@
   "dependencies": {
     "@anchordiv/rabbitmq-broker": "^1.0.9",
     "@gogittix/common": "^1.0.15",
+    "@prisma/adapter-pg": "^7.2.0",
+    "@prisma/client": "^7.2.0",
     "axios": "^1.7.9",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -23,6 +24,8 @@
     "express": "^4.21.2",
     "express-validator": "^7.2.1",
     "lodash": "^4.17.21",
+    "pg": "^8.16.3",
+    "prisma": "^7.2.0",
     "reflect-metadata": "^0.2.2",
     "slugify": "^1.6.6",
     "swagger-jsdoc": "^6.2.8",
@@ -30,10 +33,10 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@prisma/client": "^6.3.0",
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.15",
     "@types/node": "^22.10.5",
+    "@types/pg": "^8.16.0",
     "@types/supertest": "^6.0.2",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.7",
