Fix recipe service build/deploy flow and UI refreshes

--- a/infra/helm/food-app/templates/migrations.yaml
+++ b/infra/helm/food-app/templates/migrations.yaml
@@ -9,7 +9,7 @@ metadata:
     app: {{ .appLabel | default .name }}
     {{- include "food-app.labels" $ | nindent 4 }}
   annotations:
-    "helm.sh/hook": {{ .hook | default "pre-install,pre-upgrade" | quote }}
+    "helm.sh/hook": {{ .hook | default "post-install,post-upgrade" | quote }}
     "helm.sh/hook-weight": {{ .hookWeight | default "0" | quote }}
     "helm.sh/hook-delete-policy": {{ .hookDeletePolicy | default "before-hook-creation,hook-succeeded" | quote }}
 spec:
@@ -25,6 +25,10 @@ spec:
       imagePullSecrets:
         {{- toYaml $.Values.imagePullSecrets | nindent 8 }}
       {{- end }}
+      {{- if .initContainers }}
+      initContainers:
+        {{- toYaml .initContainers | nindent 8 }}
+      {{- end }}
       containers:
         - name: {{ .containerName | default .name }}
           image: "{{ .image.repository }}:{{ default $.Values.global.imageTag .image.tag }}"
@@ -32,6 +36,11 @@ spec:
           {{- if .command }}
           command:
             {{- toYaml .command | nindent 12 }}
+          {{- else }}
+          command:
+            - sh
+            - -c
+            - npx prisma migrate deploy --config=prisma.config.ts
           {{- end }}
           {{- if .args }}
           args:
