helm: wait for rabbitmq before recipe starts

--- a/infra/helm/food-app/values.yaml
+++ b/infra/helm/food-app/values.yaml
@@ -82,6 +82,13 @@ services:
       image:
         repository: gabeodame/recipe-backend
         pullPolicy: IfNotPresent
+      initContainers:
+        - name: wait-for-rabbitmq
+          image: busybox
+          command:
+            - sh
+            - "-c"
+            - "until nc -z rabbitmq-service 5672; do echo waiting for rabbitmq; sleep 2; done;"
       env:
         - name: DATABASE_URL
           valueFrom:
