--- a/infra/helm/food-app/templates/migrations.yaml
+++ b/infra/helm/food-app/templates/migrations.yaml
@@ -3,7 +3,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ .name }}
+  name: {{ printf "%s-%d" .name $.Release.Revision }}
   namespace: {{ $.Release.Namespace }}
   labels:
     app: {{ .appLabel | default .name }}
@@ -11,9 +11,10 @@ metadata:
   annotations:
     "helm.sh/hook": {{ .hook | default "post-install,post-upgrade" | quote }}
     "helm.sh/hook-weight": {{ .hookWeight | default "0" | quote }}
-    "helm.sh/hook-delete-policy": {{ .hookDeletePolicy | default "before-hook-creation,hook-succeeded" | quote }}
+    "helm.sh/hook-delete-policy": {{ .hookDeletePolicy | default "before-hook-creation,hook-succeeded,hook-failed" | quote }}
 spec:
-  backoffLimit: {{ .backoffLimit | default 3 }}
+  backoffLimit: {{ .backoffLimit | default 1 }}
+  ttlSecondsAfterFinished: {{ .ttlSecondsAfterFinished | default 300 }}
   template:
     metadata:
       labels:
@@ -21,6 +22,8 @@ spec:
         {{- include "food-app.labels" $ | nindent 8 }}
     spec:
       restartPolicy: OnFailure
+      securityContext:
+        runAsNonRoot: true
       {{- if $.Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml $.Values.imagePullSecrets | nindent 8 }}
@@ -33,6 +36,9 @@ spec:
         - name: {{ .containerName | default .name }}
           image: "{{ .image.repository }}:{{ default $.Values.global.imageTag .image.tag }}"
           imagePullPolicy: {{ .image.pullPolicy | default "IfNotPresent" }}
+          securityContext:
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
           {{- if .command }}
           command:
             {{- toYaml .command | nindent 12 }}
@@ -40,16 +46,24 @@ spec:
           command:
             - sh
             - -c
-            - npx prisma migrate deploy --config=prisma.config.ts
+            - ./node_modules/.bin/prisma migrate deploy --config=prisma.config.ts
           {{- end }}
           {{- if .args }}
           args:
             {{- toYaml .args | nindent 12 }}
           {{- end }}
-          {{- if .env }}
           env:
+            {{- if .env }}
             {{- toYaml .env | nindent 12 }}
-          {{- end }}
+            {{- end }}
+            - name: TMPDIR
+              value: /tmp
+          volumeMounts:
+            - name: tmp
+              mountPath: /tmp
+      volumes:
+        - name: tmp
+          emptyDir: {}
 ---
 {{- end }}
 {{- end }}
